[fix] arrows vertical alignment

--- a/src/sass/module/_arrow.sass
+++ b/src/sass/module/_arrow.sass
@@ -4,6 +4,8 @@
 
 .arrow
   +size(3rem)
+  position: absolute
+  top: calc(50% - 1.5rem)
   z-index: 999
   background-color: $color-text
   color: $white
@@ -17,52 +19,41 @@
 
   +mq($bp-md)
     +size(5rem)
+    top: calc(50% - 2.5rem)
     transition: transform 0.3s $bezier
     line-height: 4.6rem
 
 .arrow--intro
-  position: absolute
-  top: 50%
   left: calc(95% - 1.5rem)
 
   +mq($bp-md)
     left: calc(95% - 2.5rem)
 
 .arrow--asap
-  position: absolute
-  top: 50%
   left: calc(185% - 1.5rem)
 
   +mq($bp-md)
     left: calc(185% - 2.5rem)
 
 .arrow--faustina
-  position: absolute
-  top: 50%
   left: calc(275% - 1.5rem)
 
   +mq($bp-md)
     left: calc(275% - 2.5rem)
 
 .arrow--manuale
-  position: absolute
-  top: 50%
   left: calc(365% - 1.5rem)
 
   +mq($bp-md)
     left: calc(365% - 2.5rem)
 
 .arrow--archivo
-  position: absolute
-  top: 50%
   left: calc(455% - 1.5rem)
 
   +mq($bp-md)
     left: calc(455% - 2.5rem)
 
 .arrow--saira
-  position: absolute
-  top: 50%
   left: calc(545% - 1.5rem)
 
   +mq($bp-md)
